--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "PACKAGE NAME",
+  "name": "react-graph-js",
   "version": "1.0.0",
-  "description": "DESCRIPTION",
+  "description": "A charting library for react.",
   "repository": "https://github.com/Jarvismkennedy/graphjs.git",
   "author": "Jarvis Kennedy",
   "license": "Apache-2.0",
