--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@storybook/manager-webpack4": "^6.5.14",
     "@storybook/react": "^6.5.14",
     "@storybook/testing-library": "^0.0.13",
+    "@types/d3-shape": "^3.1.0",
     "@types/react": "^18.0.26",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
@@ -48,5 +49,8 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "build": "rollup -c --bundleConfigAsCjs"
+  },
+  "dependencies": {
+    "d3-shape": "^3.1.0"
   }
 }
